[BUG-FE] Align Favorites Cards on Profile Page with Design Specificat… (#398)
* [BUG-FE] Align Favorites Cards on Profile Page with Design Specifications: at 1440 resolution

* Fixed formatting

--- a/frontend/src/shared/ui/profile-recipe-card/ProfileRecipeCard.module.css
+++ b/frontend/src/shared/ui/profile-recipe-card/ProfileRecipeCard.module.css
@@ -58,6 +58,15 @@
   justify-content: space-between;
 }
 
+@media (max-width: 1440px) {
+  .content {
+    max-width: 846px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
 .title {
   font-size: 20px;
   margin: 0;
